--- a/src/Styles/Site.css
+++ b/src/Styles/Site.css
@@ -1,5 +1,5 @@
 ﻿@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&display=swap");
 :root {
     /*Our dark grey*/
     --liquido: #23272b;
@@ -246,4 +246,8 @@ tr {
     color: white;
     font-family: Consolas, monospace;
     background-color: #1e1e1e;
+}
+.logo {
+    -webkit-user-drag: none;
+    user-drag : none;
 }
