added number rounding

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -56,6 +56,10 @@ nav {
     width: 40%;
     transition: 0.2s;
 }
+.center select {
+    width: 40%;
+    transition: 0.2s;
+}
 .center textarea {
     width: 40%;
     transition: 0.2s;
@@ -81,6 +85,10 @@ nav {
         width: 50%;
         transition: 0.2s;
     }
+    .center select {
+        width: 50%;
+        transition: 0.2s;
+    }
     .message {
         width: 50%;
         transition: 0.2s;
@@ -93,6 +101,10 @@ nav {
         transition: 0.2s;
     }
     .center input[type="text"] {
+        width: 90%;
+        transition: 0.2s;
+    }
+    .center select {
         width: 90%;
         transition: 0.2s;
     }
