--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -260,6 +260,13 @@ tr {
     background-color: #1e1e1e;
 }
 .logo {
+    /*make the logo in the index.html file non-draggable*/
     -webkit-user-drag: none;
     user-drag : none;
+}
+@media screen and (max-width: 915px) {
+    /*make the table 95% width for phones*/
+    .btn-mobile {
+        display: none;
+    }
 }
