--- a/Styles/Profile.css
+++ b/Styles/Profile.css
@@ -1,7 +1,8 @@
 .profile-pic {
-    /*style the profile pic*/
+    /*style the profile pic
+      bound to be replaced by bootstrap classes*/
     border: 1px solid black;
     border-radius: 50%; 
     height: 1em; 
     width: auto;
-  }
+}
