beta: added displacement calc

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -243,7 +243,8 @@ tr {
 #triout,
 #etriout,
 #circleout,
-#trapout {
+#trapout,
+#dxout {
     /*make the output text bigger along with the line height*/
     font-size: 20px !important;
     line-height: 24px !important;
