--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -61,16 +61,6 @@
             </li>
             <li class="nav-item dropdown">
                 <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Science
-                    <i class="bi bi-caret-down-fill"></i>
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <h5 class="dropdown-header">Movement</h5>
-                    <a href="phypotenuse.html" class="dropdown-item"><i class="bi bi-arrow-left-right"></i> Displacement Calculator</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Unit Converter
                     <i class="bi bi-caret-down-fill"></i>
                 </a>
@@ -83,28 +73,12 @@
             </li>
             <li class="nav-item dropdown">
                 <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Account
-                    <i class="bi bi-caret-down-fill"></i>
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a href="" class="dropdown-item"><div class="g-signin2" data-onsuccess="onSignIn"></div></a>
-                    <a href="" class="dropdown-item"><i class="bi bi-person-circle"></i> <span id="display">Not Signed In</span></a>
-                    <a href="" class="dropdown-item" onclick="signOut();" id="signout"><i class="bi bi-door-closed"></i> Sign out</a>
-                    <div class="dropdown-divider"></div>
-                    <a href="stats.html" class="dropdown-item"><i class="bi bi-graph-up"></i> Stats</a>
-                    <div class="dropdown-divider"></div>
-                    <h5 class="dropdown-header">Legal</h5>
-                    <a href="tos.html" class="dropdown-item"><i class="bi bi-card-checklist"></i> Terms of Use</a>
-                    <a href="license.html" class="dropdown-item"><i class="bi bi-credit-card-2-front"></i> Software License</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Contact
+                    Links
                     <i class="bi bi-caret-down-fill"></i>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a href="contact.html" class="dropdown-item"><i class="bi bi-telephone-fill"></i> Contact Form</a>
+                    <a href="stats.html" class="dropdown-item"><i class="bi bi-graph-up"></i> Stats</a>
                     <a href="https://github.com/mathflare" target="_blank" class="dropdown-item"><i class="bi bi-github"></i> GitHub</a>
                     <a href="mailto:mathflare@dkatsios.tk" target="_blank" class="dropdown-item"><i class="bi bi-envelope-fill"></i> Email</a>
                     <a href="https://www.instagram.com/mathflare/" class="dropdown-item"><i class="bi bi-instagram"></i> Instagram</a>
@@ -112,6 +86,10 @@
                     <a href="https://developers.mathflare.tk" target="_blank" class="dropdown-item"><i class="bi bi-code-slash"></i> For Developers</a>
                     <a href="https://github.com/mathflare/mathflare/issues" target="_blank" class="dropdown-item"><i class="bi bi-bug-fill"></i> Report a Bug</a>
                     <a href="https://github.com/mathflare/mathflare/issues" target="_blank" class="dropdown-item"><i class="bi bi-lightbulb-fill"></i> Suggest an Edit</a>
+                    <div class="dropdown-divider"></div>
+                    <h5 class="dropdown-header">Legal</h5>
+                    <a href="tos.html" class="dropdown-item"><i class="bi bi-card-checklist"></i> Terms of Use</a>
+                    <a href="license.html" class="dropdown-item"><i class="bi bi-credit-card-2-front"></i> Software License</a>
                 </div>
             </li>
             <li class="nav-item">
