prod: updated navbar

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -77,6 +77,7 @@
                     <i class="bi bi-caret-down-fill"></i>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <h5 class="dropdown-header">Contact</h5>
                     <a href="contact.html" class="dropdown-item"><i class="bi bi-telephone-fill"></i> Contact Form</a>
                     <a href="stats.html" class="dropdown-item"><i class="bi bi-graph-up"></i> Stats</a>
                     <a href="https://github.com/mathflare" target="_blank" class="dropdown-item"><i class="bi bi-github"></i> GitHub</a>
