--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -24,6 +24,7 @@
                     <a href="percent.html" class="dropdown-item"><i class="bi bi-percent"></i> Percentage Calculator</a>
                     <a href="round.html" class="dropdown-item"><i class="bi bi-arrows-expand"></i> Round Numbers</a>
                     <a href="fact.html" class="dropdown-item"><i class="bi bi-exclamation-lg"></i> Factorials</a>
+                    <a href="slope.html" class="dropdown-item"><i class="bi bi-graph-up"></i> Slope Calculator</a>
                     <div class="dropdown-divider"></div>
                     <h5 class="dropdown-header">Equations</h5>
                     <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
