prod: trapezoid diagonal calculator

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -222,7 +222,9 @@ hr {
 #etriout,
 #circleout,
 #trapout,
-#dxout {
+#dxout,
+#trapout1,
+#trapout2 {
     /*make the output text bigger along with the line height*/
     font-size: 20px !important;
     line-height: 24px !important;
