--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -62,6 +62,16 @@
             </li>
             <li class="nav-item dropdown">
                 <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Science
+                    <i class="bi bi-caret-down-fill"></i>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <h5 class="dropdown-header">Basic Science</h5>
+                    <a href="displacement.html" class="dropdown-item"><i class="bi bi-arrow-left-right"></i> Displacement Calculator</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Unit Converter
                     <i class="bi bi-caret-down-fill"></i>
                 </a>
