prod: added handshake calculator

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -28,13 +28,16 @@
                     <div class="dropdown-divider"></div>
                     <h5 class="dropdown-header">Equations</h5>
                     <a href="equations.html" class="dropdown-item"><i class="bi bi-percent"></i> 1st Degree</a>
-                    <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> 2nd Degree</a>
+                    <a href="equations-second.html" class="dropdown-item"><i class="bi bi-percent"></i> Quadratic Equations</a>
                     <div class="dropdown-divider"></div>
                     <h5 class="dropdown-header">Inequalities</h5>
                     <a href="inequalities.html" class="dropdown-item"><i class="bi bi-code"></i> 1st Degree</a>
                     <div class="dropdown-divider"></div>
                     <h5 class="dropdown-header">Systems of Equations</h5>
                     <a href="linear-systems.html" class="dropdown-item"><i class="bi bi-border-width"></i> Linear 2&#215;2 Systems</a>
+                    <div class="dropdown-divider"></div>
+                    <h5 class="dropdown-header">Popular Problems</h5>
+                    <a href="handshake.html" class="dropdown-item">🤝 Handshakes at Party</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
