prod: added identities to the cheat sheet

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -108,7 +108,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="formulas.html"><i class="bi bi-book"></i> Cheat Sheet</a>
+                <a class="nav-link" href="cheatsheet.html"><i class="bi bi-book"></i> Cheat Sheet</a>
             </li>
         </ul>
     </div>
