--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -76,6 +76,16 @@
             </li>
             <li class="nav-item dropdown">
                 <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Biology
+                    <i class="bi bi-caret-down-fill"></i>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <h5 class="dropdown-header">Mendel's law</h5>
+                    <a href="punnettsquare.html" class="dropdown-item"><i class="bi bi-gender-ambiguous"></i> Punnett Square</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a href="" class="nav-link" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Unit Converter
                     <i class="bi bi-caret-down-fill"></i>
                 </a>
