prod: added perfect carbon combustion calc

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -266,3 +266,8 @@ hr {
         transition: 0.2s;
     }
 }
+@media screen and (max-width: 1320px) {
+    .navbar-brand {
+        text-align: center !important;
+    }
+}
