--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://www.mathflare.tk">
-            <img src="Assets/icon.png" class=" user-select-none logo" style="height: 1em;" alt="logo">
+            <img src="Assets/icon.png" class="user-select-none mb-1" style="height: 1em;" alt="logo">
             MathFlare
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
