prod: add imperfect carbon combustion calc

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -115,6 +115,8 @@
                         <h5 class="dropdown-header">Carbon Combustions</h5>
                         <a href="carboncombustions.html" class="dropdown-item"><i class="bi bi-minecart-loaded"></i>
                             Perfect Combustions</a>
+                        <a href="imperfcarboncombust.html" class="dropdown-item"><i class="bi bi-minecart-loaded"></i>
+                            Imperfect Combustions</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
