fix: use proper phrasiology

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -114,9 +114,9 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <h5 class="dropdown-header">Carbon Combustions</h5>
                         <a href="carboncombustions.html" class="dropdown-item"><i class="bi bi-minecart-loaded"></i>
-                            Perfect Combustions</a>
+                            Complete Combustions</a>
                         <a href="imperfcarboncombust.html" class="dropdown-item"><i class="bi bi-minecart-loaded"></i>
-                            Imperfect Combustions</a>
+                            Incomplete Combustions</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
