prod: added donation button

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -139,6 +139,11 @@
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <h5 class="dropdown-header">Donate</h5>
+                        <a href="https://paypal.me/mathflare" target="_blank" rel="noopener" class="dropdown-item">💲
+                            Donate to MathFlare <span class="badge"
+                                style="background-color: #036BB7;">PayPal.me/mathflare</span></a>
+                        <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Contact</h5>
                         <a href="contact.html" class="dropdown-item"><i class="bi bi-telephone-fill"></i> Contact
                             Form</a>
