--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -140,7 +140,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <h5 class="dropdown-header">Donate</h5>
-                        <a href="https://paypal.me/mathflare" target="_blank" rel="noopener" class="dropdown-item">💲
+                        <a href="https://paypal.me/mathflare" target="_blank" rel="noopener" class="dropdown-item"><i
+                                class="bi bi-heart-fill" style="color: var(--bs-pink)"></i>
                             Donate to MathFlare <span class="badge"
                                 style="background-color: #036BB7;">PayPal.me/mathflare</span></a>
                         <div class="dropdown-divider"></div>
