prod: updated funding methods

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -142,8 +142,12 @@
                         <h5 class="dropdown-header">Donate</h5>
                         <a href="https://paypal.me/mathflare" target="_blank" rel="noopener" class="dropdown-item"><i
                                 class="bi bi-heart-fill" style="color: var(--bs-pink)"></i>
-                            Donate to MathFlare <span class="badge"
+                            PayPal Me <span class="badge"
                                 style="background-color: #036BB7;">PayPal.me/mathflare</span></a>
+                        <a href="https://www.buymeacoffee.com/mathflare" target="_blank" rel="noopener" class="dropdown-item"><i
+                                class="bi bi-heart-fill" style="color: var(--bs-pink)"></i>
+                            Buy me a Pizza <span class="badge"
+                                style="background-color: #036BB7;">buymeacoffee/mathflare</span></a>
                         <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Contact</h5>
                         <a href="contact.html" class="dropdown-item"><i class="bi bi-telephone-fill"></i> Contact
