prod: added trigonometric calculator

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -229,7 +229,10 @@ hr {
 #trapout2,
 #dxout1,
 #dtout2,
-#vout3 {
+#vout3,
+#sinout,
+#cosout,
+#tanout {
     /*make the output text bigger along with the line height*/
     font-size: 20px !important;
     line-height: 24px !important;
