--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -74,6 +74,10 @@
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <h5 class="dropdown-header">Basic Trigonometry</h5>
+                        <a href="trigcalculator.html" class="dropdown-item"><i class="bi bi-calculator"></i>
+                            Trigonometric Calculator (Sin,Cos,Tan)</a>
+                        <div class="dropdown-divider"></div>
                         <h5 class="dropdown-header">Pythagorean Theorem</h5>
                         <a href="phypotenuse.html" class="dropdown-item"><i class="bi bi-symmetry-vertical"></i>
                             Hypotenuse Calculator</a>
@@ -144,8 +148,8 @@
                                 class="bi bi-heart-fill" style="color: var(--bs-pink)"></i>
                             PayPal Me <span class="badge"
                                 style="background-color: #036BB7;">PayPal.me/mathflare</span></a>
-                        <a href="https://www.buymeacoffee.com/mathflare" target="_blank" rel="noopener" class="dropdown-item"><i
-                                class="bi bi-heart-fill" style="color: var(--bs-pink)"></i>
+                        <a href="https://www.buymeacoffee.com/mathflare" target="_blank" rel="noopener"
+                            class="dropdown-item"><i class="bi bi-heart-fill" style="color: var(--bs-pink)"></i>
                             Buy me a Pizza <span class="badge"
                                 style="background-color: #036BB7;">buymeacoffee/mathflare</span></a>
                         <div class="dropdown-divider"></div>
