--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" style="border-bottom: 2px solid var(--bs-warning); ">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://www.mathflare.tk">
             <img src="Assets/icon.png" class="user-select-none mb-1" style="height: 1em;" alt="logo">
