fix: fixed scrollbar issue with sticky navabr

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" style="border-bottom: 2px solid var(--bs-warning); ">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="border-bottom: 2px solid var(--bs-warning); ">
     <div class="container-fluid">
         <a class="navbar-brand" href="https://www.mathflare.tk">
             <img src="Assets/icon.png" class="user-select-none mb-1" style="height: 1em;" alt="logo">
@@ -8,8 +8,8 @@
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse navbar-nav-scroll" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav navbar-nav-scroll mt-4 mt-xxl-0" style="--bs-scroll-height: 40em;">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home</a>
                 </li>
