prod: changed contact mail in navbar

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -159,7 +159,7 @@
                         <a href="stats.html" class="dropdown-item"><i class="bi bi-graph-up"></i> Stats</a>
                         <a href="https://github.com/mathflare" target="_blank" class="dropdown-item"><i
                                 class="bi bi-github"></i> GitHub</a>
-                        <a href="mailto:mathflare@dkatsios.tk" target="_blank" class="dropdown-item"><i
+                        <a href="mailto:mathflare@pm.me" target="_blank" class="dropdown-item"><i
                                 class="bi bi-envelope-fill"></i> Email</a>
                         <a href="https://www.instagram.com/mathflare/" class="dropdown-item"><i
                                 class="bi bi-instagram"></i> Instagram</a>
