beta: swapped top navbar with sidebar

--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -7411,7 +7411,7 @@ textarea.form-control-lg {
 }
 
 .bg-dark {
-  background-color: #343A40 !important;
+    background-color: #23272B !important;
 }
 
 .bg-body {
