--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -11,7 +11,7 @@
 }
 body {
     font-family: "Poppins", sans-serif !important;
-    color: var(--white);
+    color: hsl(0, 0%, 100%);
     background-color: var(--liquido);
     background-color: #23272b;
 }
@@ -24,13 +24,144 @@ body {
     display: none;
 }
 .navbar-collapse ::-webkit-scrollbar-thumb {
-    background: #23272B !important;
+    background: #23272b !important;
     border-radius: 5px !important;
 }
-nav {
-    /*Make tha navbar be on top of the contents*/
-    z-index: 100000 !important;
-}
+
+/*=====SIDEBAR START=====*/
+  .navbar-dark {
+      background-color: #23272B;
+  }
+  .offcanvas {
+    background-color: hsl(210, 11%, 15%);
+    z-index: 1000000 !important;
+    transition: 0.3s;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .offcanvas {
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      transition: 0.3s;
+    }
+  }
+  
+  .b-example-divider {
+    flex-shrink: 0;
+    width: 1.5rem;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: solid rgba(0, 0, 0, 0.15);
+    border-width: 1px 0;
+    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
+      inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
+  }
+  
+  .offcanvas .bi {
+    vertical-align: -0.125em;
+    pointer-events: none;
+    fill: currentColor;
+    margin-right: 0.3em;
+  }
+  
+  .dropdown-toggle {
+    outline: 0;
+  }
+  
+  .nav-flush .nav-link {
+    border-radius: 0;
+  }
+  
+  .btn-toggle {
+    display: inline-flex;
+    align-items: center;
+    padding: 0.25rem 0.5rem;
+    font-weight: 500;
+    /*here*/
+    color: white;
+    background-color: transparent;
+    border: 0;
+  }
+  .btn-toggle:hover,
+  .btn-toggle:focus,
+  .btn-offcanvas-link:hover,
+  .btn-offcanvas-link:focus {
+    /*here*/
+    color: white;
+    background-color: hsl(208, 11%, 23%);
+  }
+  
+  .btn-toggle::before {
+    width: 1.25em;
+    line-height: 0;
+    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
+    transition: transform 0.35s ease;
+    transform-origin: 0.5em 50%;
+  }
+  .btn-toggle[aria-expanded="true"]::before {
+    transform: rotate(90deg);
+  }
+  
+  .btn-toggle-nav a {
+    display: inline-flex;
+    padding: 0.1875rem 0.5rem;
+    margin-top: 0.125rem;
+    margin-left: 1.25rem;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  
+  .btn-toggle-nav .active {
+    background-color: hsl(208, 11%, 23%) !important;
+  }
+  
+  .btn-offcanvas-link.active {
+    background-color: hsl(208, 11%, 23%) !important;
+  }
+  
+  .btn-toggle-nav .nav-header {
+    display: inline-flex;
+    padding: 0.1875rem 0.5rem;
+    margin-top: 0.125rem;
+    margin-left: 1.25rem;
+    margin-bottom: 0;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: var(--bs-success);
+  }
+  
+  .btn-offcanvas-link {
+    display: inline-flex;
+    align-items: center;
+    padding: 0.25rem 0.5rem;
+    font-weight: 500;
+    /*here*/
+    color: white;
+    background-color: transparent;
+    border: 0;
+  }
+  
+  .btn-toggle-nav a:hover,
+  .btn-toggle-nav a:focus {
+    /*here*/
+    background-color: hsl(208, 11%, 23%);
+  }
+  
+  .scrollarea {
+    overflow-y: auto;
+  }
+  
+  .fw-semibold {
+    font-weight: 500;
+  }
+  .lh-tight {
+    line-height: 1.25;
+  }
+  
+
+/*=====SIDEBAR END=====*/
 .dead-center {
     /*Use this class for the home page only*/
     position: absolute;
@@ -212,7 +343,7 @@ hr {
 }
 .container-sm {
     /*leave a margin in the top of the small container in the stats page*/
-    margin-top: 30px !important;
+    margin-top: 7.5em;
 }
 .text-success {
     /*make the bootstrap success color lighter*/
