prod: fixed navbar links

--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -18,7 +18,7 @@
         <nav>
             <ul class="list-unstyled ps-0">
                 <li class="my-2">
-                    <a class="btn btn-offcanvas-link align-items-center rounded" href="index.html">
+                    <a class="btn btn-offcanvas-link align-items-center rounded" href="index.html" id="home-link">
                         <i class="bi bi-house"></i>Home
                     </a>
                 </li>
@@ -235,12 +235,6 @@
                             <li><a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener"
                                     class="link-light rounded"><i class="bi bi-lightbulb-fill"></i> Suggest an Edit</a>
                             </li>
-                            <li><a href="https://instagram.com/mathflare" target="_blank" rel="noopener"
-                                    class="link-light rounded"><i class="bi bi-instagram"></i> Instagram</a></li>
-                            <li><a href="https://instagram.com/mathflare" target="_blank" rel="noopener"
-                                    class="link-light rounded"><i class="bi bi-instagram"></i> Instagram</a></li>
-                            <li><a href="https://instagram.com/mathflare" target="_blank" rel="noopener"
-                                    class="link-light rounded"><i class="bi bi-instagram"></i> Instagram</a></li>
                             <li>
                                 <p class="nav-header rounded user-select-none">Legal</p>
                             </li>
