--- a/Styles/Scrollbar.css
+++ b/Styles/Scrollbar.css
@@ -1,22 +1,16 @@
-﻿/*for Chromium based browsers*/
-:root {
-    --mathgray: #23272b;
-    --grey: #888888;
-  }
+﻿* {
+    scrollbar-width: thin;
+    scrollbar-color: hsl(0, 0%, 53%) hsl(210, 10%, 15%);
+}
 ::-webkit-scrollbar {
     width: 0.3em;
 }
 ::-webkit-scrollbar-track {
-    background-color: var(--mathgray);
+    background-color: hsl(210, 10%, 15%);
 }
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: hsl(0, 0%, 53%);
 }
-    ::-webkit-scrollbar-thumb:hover {
-        background: #555;
-    }
-/*for Firefox based browsers*/
-* {     
-    scrollbar-width: thin;
-    scrollbar-color: var(--lg-gray) var(--mathgray);
-  }
+::-webkit-scrollbar-thumb:hover {
+    background: hsl(0, 0%, 33%);
+}
