--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 body {
     font-family: "Poppins", sans-serif !important;
     color: hsl(0, 0%, 100%);
@@ -272,7 +273,7 @@ hr {
     }
 }
 /*=====915 MEDIA QUERY=====*/
-@media screen and (max-width: 915px) {
+@media screen and (max-wid : 915px) {
     .navbar-brand {
         text-align: center !important;
         margin-left: auto !important;
